--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^6.0.12"
+  },
+  "dependencies": {
+    "electron-reload": "^1.5.0"
   }
 }
